# cpp-toolkit

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt  Random.cpp
src/math/include/hm/math/: Random.h  utils.h
src/sdl/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  README.md  Rectangle.cpp  Rectangle.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Window.cpp  Window.h  iApplication.h  iTexture.h
src/system/: CMakeLists.txt  File.cpp  Logger.cpp  Platform.cpp  README.md
src/system/include/hm/system/: Exception.h  File.h  Logger.h  Platform.h
src/utils/: CMakeLists.txt  Color.cpp  README.md
src/utils/include/hm/utils/: Color.h  types.h
test/: CMakeLists.txt  mainTest.cpp
test/hm/math/: RandomTest.h  utilsTest.h
test/hm/system/: FileTest.h  PlatformTest.h
test/hm/utils/: ColorTest.h
